# serializer version: 1
# name: test_hvac_device_state[tests/fixtures/smart-lock-locked.yaml]
  tuple(
    'locked',
    ReadOnlyDict({
      'friendly_name': 'Front Door Lock',
      'supported_features': <LockEntityFeature: 0>,
    }),
  )
# ---
# name: test_hvac_device_state[tests/fixtures/smart-lock-unlocked.yaml]
  tuple(
    'unlocked',
    ReadOnlyDict({
      'friendly_name': 'Front Door Lock',
      'supported_features': <LockEntityFeature: 0>,
    }),
  )
# ---
